# TorreNegra

./: Aleatorio.c  Animais.c  Batalha.c  CMakeLists.txt  CriarPersonagem.c  DecisaoMonstro.c  DecisaoPlayer.c  Demonio.c  Djinn.c  Dragao.c  Gerar.c  GerarMonstro.c  Gigante.c  Goblin.c  Guerreiro.c  Historia.c  Inicio.c  Ladino.c  Mago.c  Minotauro.c  Monstros.h  Muriel.c  Ogro.c  Orcs.c  Paladino.c  Personagem.h  Pirata.c  README.md  Troll.c  main.c
textos/: DIED.txt  hist.txt  historia_inicio.txt  julgamento.txt  simnao.txt
