cmake_minimum_required(VERSION 3.22)
project(TorreNegra C)

set(CMAKE_C_STANDARD 99)

add_executable(TorreNegra
        main.c
        Aleatorio.c
        Personagem.h
        Monstros.h
        Animais.c
        Batalha.c
        DecisaoMonstro.c
        CriarPersonagem.c
        DecisaoPlayer.c
        Demonio.c
        Djinn.c
        Dragao.c
        GerarMonstro.c
        Gerar.c
        Gigante.c
        Goblin.c
        Guerreiro.c
        Historia.c
        Inicio.c
        Ladino.c
        Mago.c
        Minotauro.c
        Muriel.c
        Ogro.c
        Orcs.c
        Paladino.c
        Pirata.c
        Troll.c)
